--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="icons">
           <i class="ri-search-line"></i>
           <i class="ri-heart-3-line"></i>
-        </div>
+        </div>~
       </nav>
       <h1>Hi, vatsal</h1>
       <div class="list">
